share/kubernetes_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: share-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: share
  template:
    metadata:
      labels:
        app: share
    spec:
      containers:
      - name: share
        image: gcr.io/ntub-senior-project-427211/share:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: cloudsql-instance-credentials
          mountPath: /secrets
          readOnly: true
      - name: cloud-sql-proxy
        image: gcr.io/cloudsql-docker/gce-proxy:1.19.1
        command: ["/cloud_sql_proxy",
                  "-instances=ntub-senior-project-427211:asia-east1:ntub-senior-project-instance=tcp:5432",
                  "-credential_file=/secrets/key.json"]
        volumeMounts:
        - name: cloudsql-instance-credentials
          mountPath: /secrets
          readOnly: true
      volumes:
      - name: cloudsql-instance-credentials
        secret:
          secretName: cloudsql-instance-credentials
---
apiVersion: v1
kind: Service
metadata:
  name: share-service
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8000
  selector:
    app: share
